--- a/server/package.json
+++ b/server/package.json
@@ -13,11 +13,16 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.7.0",
-    "express": "^5.1.0"
+    "bcryptjs": "^3.0.2",
+    "express": "^5.1.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.2",
+    "@types/passport": "^1.0.17",
+    "@types/passport-local": "^1.0.38",
     "prisma": "^6.7.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
